--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "next": "^10.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "raw-loader": "^4.0.2"
   }
 }
