--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gray-matter": "^4.0.2",
     "js-yaml": "^3.14.0",
     "marked": "^1.2.2",
-    "raw-loader": "^4.0.2"
+    "postcss-preset-env": "^6.7.0",
+    "raw-loader": "^4.0.2",
+    "tailwindcss": "^1.9.6"
   }
 }
