--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "devDependencies": {
     "gray-matter": "^4.0.2",
+    "highlight.js": "^10.3.2",
     "js-yaml": "^3.14.0",
-    "marked": "^1.2.2",
+    "markdown-it": "^12.0.2",
     "postcss-preset-env": "^6.7.0",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^1.9.6"
