Adds post list component.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": "./",
     "paths": {
       "@includes/*": ["_includes/*"],
+      "@components/*": ["_components/*"],
       "@layouts/*": ["_layouts/*"],
       "@posts/*": ["_posts/*"],
       "@api": ["api/index"],
