Started peanutbutter folder for eventual extraction.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,7 @@
       "@layouts/*": ["_layouts/*"],
       "@posts/*": ["_posts/*"],
       "@api": ["api/index"],
+      "@peanutbutter": ["_peanutbutter/*"],
     }
   }
 }
