--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A collection of JavaScript tutorials.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "next",
     "build": "next build",
     "export": "next export"
@@ -18,8 +18,14 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.26.6",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.1.2",
+    "babel-jest": "^26.6.3",
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.3.2",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
     "js-yaml": "^3.14.0",
     "markdown-it": "^12.0.2",
     "postcss-preset-env": "^6.7.0",
