Removes magic variables from post queries.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_GA_TRACKING_ID='YOUR GA TRACKING ID'
+NEXT_PUBLIC_PB_SITE_TITLE='Your site title'
+NEXT_PUBLIC_PB_SITE_DESCRIPTION='Your site description'
+POST_DIRECTORY='_posts'
+BLOCK_DIRECTORY='_blocks'
