Adds RSS library.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ NEXT_PUBLIC_PB_SITE_TITLE='Your site title'
 NEXT_PUBLIC_PB_SITE_DESCRIPTION='Your site description'
 POST_DIRECTORY='_posts'
 BLOCK_DIRECTORY='_blocks'
+PB_DOMAIN='https://mysitedomain.com'
