--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_GA_TRACKING_ID='YOUR GA TRACKING ID'
 NEXT_PUBLIC_PB_SITE_TITLE='Your site title'
 NEXT_PUBLIC_PB_SITE_DESCRIPTION='Your site description'
+NEXT_PUBLIC_PB_DOMAIN='https://mysitedomain.com'
 POST_DIRECTORY='_posts'
 BLOCK_DIRECTORY='_blocks'
-PB_DOMAIN='https://mysitedomain.com'
