--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "file-loader": "^6.2.0",
     "next": "^10.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "xml-loader": "^1.2.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^7.26.6",
