Adds SEO header component.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ NEXT_PUBLIC_PB_SITE_DESCRIPTION='Your site description'
 NEXT_PUBLIC_PB_DOMAIN='https://mysitedomain.com'
 POST_DIRECTORY='_posts'
 BLOCK_DIRECTORY='_blocks'
+PB_DEFAULT_AUTHOR=''
+PB_DEFEAULT_AUTHOR_TWITTER_HANDLE=''
+PB_SITE_TWITTER_HANDLE=''
