--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^10.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
     "xml-loader": "^1.2.1"
   },
   "devDependencies": {
